--- a/src/components/ui/RadioInput/RadioInput.module.scss
+++ b/src/components/ui/RadioInput/RadioInput.module.scss
@@ -13,6 +13,7 @@
     }
 
     .radioInputLabel {
+        line-height: 20px;
         cursor: pointer;
         transition: all 0.2s linear;
     }
