--- a/src/components/shared/Header/Header.scss
+++ b/src/components/shared/Header/Header.scss
@@ -14,6 +14,11 @@
         opacity: 0;
         visibility: hidden;
         transition: all 0.2s linear;
+        display: none;
+
+        @media (max-width: $breakpoint-md) {
+            display: block;
+        }
 
         &--open {
             opacity: 1;
