--- a/src/components/shared/Footer/Footer.scss
+++ b/src/components/shared/Footer/Footer.scss
@@ -31,6 +31,7 @@
         font-family: 'Inter';
         font-size: 36px;
         font-weight: 800;
+        line-height: 44px;
         display: block;
         width: fit-content;
         margin: 0 auto;
@@ -167,6 +168,7 @@
         &__title {
             font-size: 18px;
             font-weight: 600;
+            line-height: 26px;
             margin-bottom: 20px;
 
             @media (max-width: $breakpoint-sm) {
@@ -202,6 +204,7 @@
     .subscription {
         &__title {
             font-size: 18px;
+            line-height: 26px;
             margin-bottom: 29px;
 
             @media (max-width: $breakpoint-sm) {
@@ -220,7 +223,8 @@
             border: 1px solid transparent;
             padding-left: 10px;
             font-size: 11px;
-            flex-grow: 1;
+            box-sizing: border-box;
+            width: calc(100% - 105px);
             transition: all linear 0.2s;
             outline: none;
 
@@ -242,6 +246,8 @@
             font-size: 12px;
             border-radius: 0 4px 4px 0;
             padding: 10px 22px;
+            box-sizing: border-box;
+            width: 105px;
             cursor: pointer;
             transition: all linear 0.2s;
 
@@ -258,6 +264,7 @@
             width: 85%;
             font-family: 'Manrope';
             font-size: 13px;
+            line-height: 18px;
             opacity: 0.5;
         }
     }
