--- a/src/components/shared/Header/Header.scss
+++ b/src/components/shared/Header/Header.scss
@@ -70,8 +70,13 @@
     }
 
     &__logo {
-        font-size: 18px;
-        font-weight: 700;
+        font-weight: 800;
+        font-size: 24px;
+        line-height: 1.2;
+
+        @media (max-width: $breakpoint-md) {
+            font-size: 18px;
+        }
     }
 
     &__nav {
